Fixed Overflow

--- a/trialerror/Orange/style.css
+++ b/trialerror/Orange/style.css
@@ -24,6 +24,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     z-index : -999;
+    overflow: hidden;
 }
 
 .o-eye{
@@ -32,6 +33,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     z-index : -999;
+    overflow: hidden;
 }
 
 .o-mouth{
@@ -40,9 +42,8 @@
     left: 50%;
     transform: translate(-50%, -50%);
     z-index : -999;
+    overflow: hidden;
 }
-
-
 
 
 .hero{
@@ -55,7 +56,7 @@
     */
     padding: 10px 10%;
     position: relative;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 nav{
@@ -201,6 +202,7 @@ nav ul li a:hover{
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-bottom: 25px;
 }
 
 .software-used a{
@@ -229,5 +231,39 @@ nav ul li a:hover{
     100%{
         opacity: 1;
         transform: translateY(0px);
+    }
+}
+
+@media screen and (max-height: 800px) {
+    .hero{
+        overflow-y: auto;
+    }
+}
+
+@media screen and (max-width: 1100px) {
+    ul{
+        display: none;
+    }
+
+    .body{
+        overflow-x: hidden;
+    }
+}
+
+@media screen and (max-width: 512px) {
+    *{
+        overflow-x: hidden;
+    }
+
+    .btn{
+        padding: 14px 20px;
+    }
+
+    .social{
+        overflow-y: hidden;
+    }
+
+    .software-used{
+        overflow-y: hidden;
     }
 }
